@@ -133,17 +133,17 @@
 <td></td>
 <td><p>absolute orbit number</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>aorosol_optical_depth</strong></p></td>
+<tr class="row-even"><td><p><strong>aerosol_optical_depth</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
-<td><p>aorosol optical thickness</p></td>
+<td><p>aerosol optical thickness</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>aorosol_optical_depth_uncertainty</strong></p></td>
+<tr class="row-odd"><td><p><strong>aerosol_optical_depth_uncertainty</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
-<td><p>aorosol optical thickness error</p></td>
+<td><p>aerosol optical thickness error</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>angstrom_exponent</strong></p></td>
 <td><p>float</p></td>
@@ -242,7 +242,7 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/HeaderData/VariableProductHeader/MainProductHeader/orbitNumber</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="4"><p><strong>aorosol_optical_depth</strong></p></td>
+<tr class="row-odd"><td rowspan="4"><p><strong>aerosol_optical_depth</strong></p></td>
 <td><p><em>condition</em></p></td>
 <td><p>aot unset</p></td>
 </tr>
@@ -255,7 +255,7 @@
 <tr class="row-even"><td><p><em>path</em></p></td>
 <td><p><strong>/ScienceData/aerosol_optical_thickness_865nm</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="4"><p><strong>aorosol_optical_depth_uncertainty</strong></p></td>
+<tr class="row-odd"><td rowspan="4"><p><strong>aerosol_optical_depth_uncertainty</strong></p></td>
 <td><p><em>condition</em></p></td>
 <td><p>aot unset</p></td>
 </tr>
