@@ -2,6 +2,7 @@
 
 * Updates to product ingestions:
   - EarthCARE L1: fixed TIR band ingestion options for MSI_NOM_1B.
+  - EarthCARE L2: fixed typo in variable name for MSI_AOT_2A.
   - S5P L1B: added systematic and random uncertainty variables.
   - S5P L2 O3 TCL: fixed unit of mixing ratios (ppbv -> ppv).
 
